# bk-monitor

./: .gitignore  .pre-commit-config.yaml  .qoderignore  Issue+创建+TAPD+单据.md  QWEN.md  README_BCS_CLUSTER_CHECK.md  README_BCS_CLUSTER_CHECK_ENHANCED.md  TAPD_API_get_granted_workspaces.md  TAPD_API_user_auth.md  TAPD_API_接口文档.md  TAPD_OAuth_Integration.md  TAPD_OAuth_用户态授权手册.md  issue_list_test.py  issue_test.py  pyproject.toml  requirements.txt  tapd_oauth_demo_bak.py  test_bcs_cluster_check.py  test_enhanced_bcs_cluster_check.py
.lingma/rules/: project_rule.md
.qoder/rules/: bkmonitor.md  comment.md  mermaid.md  quest.md
ai_agent/: CODEBUDDY.md  urls.py
ai_agent/core/qa/: agent.py  retriever.py
ai_agent/scenarios/bkm_chat/: agent.py  views.py
bklog/: urls.py
bklog/apps/: decorators.py  exceptions.py
bklog/apps/api/: base.py  exception.py
bklog/apps/bk_log_admin/: urls.py
bklog/apps/esb/: exceptions.py  serializers.py  urls.py  views.py
bklog/apps/grafana/: provisioning.py  urls.py
bklog/apps/iam/: exceptions.py  urls.py
bklog/apps/log_audit/: models.py
bklog/apps/log_bcs/: exceptions.py  urls.py
bklog/apps/log_clustering/: urls.py
bklog/apps/log_commons/: urls.py
bklog/apps/log_databus/: constants.py  models.py  serializers.py  urls.py
bklog/apps/log_desensitize/: constants.py  exceptions.py  models.py  serializers.py  urls.py
bklog/apps/log_esquery/: exceptions.py  urls.py
bklog/apps/log_extract/: admin.py  constants.py  exceptions.py  fileserver.py  serializers.py  tasks.py  urls.py
bklog/apps/log_measure/: exceptions.py  models.py  urls.py
bklog/apps/log_search/: constants.py  exceptions.py  models.py  serializers.py  urls.py
bklog/apps/log_trace/: constants.py  urls.py
bklog/apps/log_unifyquery/: constants.py
bklog/apps/tgpa/: constants.py
bklog/apps/utils/: drf.py  lucene.py  (+1 more)
bklog/bk_monitor/: CODEBUDDY.md
bklog/bkm_ipchooser/: views.py
bklog/bkm_search_module/: models.py  urls.py
bklog/bkm_space/: serializers.py  validate.py
bklog/config/: default.py  dev.py  prod.py  stag.py
bklog/console/: urls.py
bklog/docs/: BKLOG核心技术文档.md
bklog/flower_proxy/: urls.py
bklog/home_application/: urls.py
bklog/log_adapter/: urls.py
bklog/version_log/: config.py  models.py  urls.py
bkmonitor/: CODEBUDDY.md  monkey.py  pyproject.toml  requirements.txt  requirements_dev.txt  settings.py  urls.py
bkmonitor/ai-learning-docs/: README.md  alert_builder_experience.md  celery_experience.md  circuit_breaking_experience.md  context_experience.md  control_experience.md  detect_experience.md  fta_action_experience.md  trigger_experience.md
bkmonitor/ai_agent/: urls.py
bkmonitor/alarm_backends/: CODEBUDDY.md  alertFlowEngine.md
bkmonitor/apm/: constants.py  resources.py  urls.py
bkmonitor/bk_dataview/: CODEBUDDY.md  api.py  models.py  urls.py
bkmonitor/bkm_ipchooser/: views.py
bkmonitor/bkm_space/: utils.py
bkmonitor/bkmonitor/: db_routers.py
bkmonitor/calendars/: CODEBUDDY.md  constants.py  urls.py
bkmonitor/config/: default.py
bkmonitor/constants/: action.py  aiops.py  alert.py  apm.py  common.py  data_source.py  incident.py  issue.py  shield.py  strategy.py
bkmonitor/docs/: issues_feature_guide.md  issues_tech_implementation.md  strategy_dimensions_guide.md
bkmonitor/kernel_api/: urls.py
bkmonitor/metadata/: CODEBUDDY.md
bkmonitor/query_api/: CODEBUDDY.md
bkmonitor/scripts/: CODEBUDDY.md
bkmonitor/support-files/: CODEBUDDY.md
bkmonitor/tests/: conftest.py
bkmonitor/webpack/: pnpm-lock.yaml
docs/: DJANGO_CONF_MODULE_环境说明.md  ES索引管理机制-BaseDocument与ILM.md  ES索引管理策略全景.md  README.md  alarm_backends_service 模块架构与数据流设计文档.md  bcs_cluster_status_check_guide.md  bk-monitor-Celery配置策略设计文档.md  分布式系统实战教程-目录.md  分布式系统实战教程-第1章-分布式系统概述.md  分布式系统实战教程-第2章-服务注册与发现-Consul.md  分布式系统实战教程-第3章-一致性哈希.md  分布式系统实战教程-第4章-分布式锁原理与实践.md  分布式系统实战教程-第5章-分布式并发控制进阶.md
docs/migration-assessment/: MIGRATION_ASSESSMENT.md  access-MIGRATION_ASSESSMENT.md  alert-MIGRATION_ASSESSMENT.md  converge-MIGRATION_ASSESSMENT.md  detect-MIGRATION_ASSESSMENT.md  fta_action-MIGRATION_ASSESSMENT.md  issue-new_report-report-MIGRATION_ASSESSMENT.md  preparation-scheduler-trigger-MIGRATION_ASSESSMENT.md  selfmonitor-nodata-MIGRATION_ASSESSMENT.md
grafana_migrate/: get_promqls.py  get_variables.py  parse.py  record_grafana_data.py  record_monitor_data.py
matcher/: README.md  __init__.py  adapter.py  examples.py
my_scripts/: data.json  simplify_data.py
my_scripts/summary_daily/: extract_daily_summary.py
redis-kit/: pyproject.toml  setup.py
redis-kit/redis_kit/: __init__.py  exceptions.py  types.py
redis-kit/redis_kit/config/: loader.py  schema.py
redis-kit/redis_kit/core/: client.py  node.py  pipeline.py  proxy.py  retry.py
redis-kit/redis_kit/keys/: base.py  types.py
redis-kit/redis_kit/lock/: __init__.py  decorators.py  redis_lock.py
redis-kit/redis_kit/queue/: delay_queue.py
redis-kit/redis_kit/routing/: base.py  hash.py  range.py
redis-kit/tests/: conftest.py
redis-kit/tests/integration/: test_end_to_end.py
redis-kit/tests/unit/: test_exceptions.py  test_retry.py  test_types.py
redis-kit/tests/unit/test_config/: test_loader.py
redis-kit/tests/unit/test_keys/: test_base.py  test_types.py
redis-kit/tests/unit/test_lock/: test_redis_lock.py
redis-kit/tests/unit/test_queue/: test_delay_queue.py
redis-kit/tests/unit/test_routing/: test_hash.py  test_range.py
temp/: storage..md
tsdetect/: __init__.py  plan.md  pyproject.toml
tsdetect/algorithms/: __init__.py  amplitude.py  intelligent.py  ring_ratio.py  threshold.py  year_round.py
tsdetect/core/: __init__.py  algorithms.py  base.py  exceptions.py  interfaces.py
tsdetect/tests/: __init__.py  test_basic.py
tsdetect/units/: __init__.py  base.py
tsdetect/utils/: __init__.py  expression.py
wiki/: BCS集群生命周期管理设计文档.md  GSE(通用服务引擎).md  bk-monitor微服务架构设计文档-核心架构.md  bkmonitor关联BCS集群.md  drf_resource模块的使用.md  kafka.md  node_man(节点管理).md  单指标单表.md  告警数据的来源.md  策略引擎.md
wiki/api_docs/: GetStrategyListV2Resource策略列表查询接口文档.md
wiki/command/: run_access.md
(+1397 files in other folders)
