[project]
name = "bk-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "apigw-manager==2.0.0",
    "arrow==1.3.0",
    "babel==2.14.0",
    "bk-audit==1.0.7",
    "bk-crypto-python-sdk==1.0.4",
    "bk-iam==1.3.6",
    "bk-notice-sdk==1.2.0",
    "bkstorages==2.0.0",
    "blueapps[opentelemetry]==4.15.3",
    "celery-redbeat==0.13.0",
    "celery==5.2.7",
    "confluent-kafka==2.4.0",
    "coreapi==2.3.3",
    "cryptography==3.3.2",
    "dataclasses==0.8",
    "ddtrace==1.7.5",
    "dill==0.3.4",
    "django-bulk-update==2.2.0",
    "django-celery-beat===2.7.0",
    "django-celery-results==2.5.1",
    "django-cors-headers==3.2.1",
    "django-db-connection-pool==1.2.5",
    "django-elasticsearch-dsl==8.0",
    "django-filter==2.4.0",
    "django-jinja==2.7.1",
    "django-mysql==4.3.0",
    "django-prometheus==2.2.0",
    "django-redis==5.0.0",
    "django-rest-framework-condition==0.1.1",
    "django-versionlog==1.6.0",
    "django==4.2.16",
    "djangorestframework==3.15.1",
    "dnspython==1.16.0",
    "drf-yasg==1.21.5",
    "elasticsearch-curator==8.0.17",
    "elasticsearch-dsl==8.16.0",
    "elasticsearch5==5.5.6",
    "elasticsearch6==6.4.2",
    "elasticsearch==8.16.0",
    "furl==2.0.0",
    "gevent==24.2.1",
    "google-auth==2.4.0",
    "graphviz==0.19.1",
    "gunicorn==20.1.0",
    "humanize==3.14.0",
    "influxdb==5.2.0",
    "ipython==8.22.2",
    "jedi==0.17.2",
    "jinja2==3.1.3",
    "jmespath==0.10.0",
    "jsonpath-rw==1.3.0",
    "kafka-python==1.4.6",
    "kubernetes==18.20.0",
    "luqum==0.11.0",
    "netifaces==0.10.6",
    "networkx==2.5.1",
    "opentelemetry-api==1.11.1",
    "opentelemetry-exporter-otlp==1.11.1",
    "opentelemetry-instrumentation-celery==0.30b1",
    "opentelemetry-instrumentation-dbapi==0.30b1",
    "opentelemetry-instrumentation-django==0.30b1",
    "opentelemetry-instrumentation-elasticsearch==0.30b1",
    "opentelemetry-instrumentation-kafka-python==0.30b1",
    "opentelemetry-instrumentation-logging==0.30b1",
    "opentelemetry-instrumentation-redis==0.30b1",
    "opentelemetry-instrumentation-requests==0.30b1",
    "opentelemetry-sdk==1.11.1",
    "pika==1.3.1",
    "pillow==10.2.0",
    "ply==3.11",
    "prometheus-client==0.16.0",
    "protobuf==3.19.5",
    "psutil==5.9.8",
    "pycryptodome==3.20.0",
    "pyinstrument==3.4.2",
    "pymysql==1.0.2",
    "pypinyin==0.46.0",
    "pyppeteer==0.2.5",
    "python-consul==1.1.0",
    "python-dotenv==0.20.0",
    "python-json-logger==0.1.7",
    "python-magic==0.4.27",
    "pyyaml==6.0.2",
    "raven==6.9.0",
    "redis==5.0.3",
    "requests-toolbelt==0.10.1",
    "requests==2.31.0",
    "schema==0.7.5",
    "schematics==2.0.1",
    "selenium==4.18.1",
    "sentry-sdk==1.43.0",
    "setuptools-scm==6.4.2",
    "six==1.16.0",
    "sqlparse==0.4.4",
    "supervisor==4.2.5",
    "typing-extensions==4.12.2",
    "ujson==5.9.0",
    "wheel==0.43.0",
    "whitenoise==5.0",
    "xxhash==3.0.0",
]
